# git-batch

./: .cspell.json  .dictionary  .drone.jsonnet  .drone.yml  .gitignore  CHANGELOG.md  Containerfile.multiarch  Dockerfile  Dockerfile.multiarch  LICENSE  README.md  manifest.tmpl  pyproject.toml  setup.cfg  setup.py
.chglog/: config.yml
.github/: settings.yml
.woodpecker/: build-container.yml  build-package.yml  docs.yaml  docs.yml  lint.yml  static.yaml  static.yml  test.yml
docker/: Dockerfile  Dockerfile.amd64  Dockerfile.arm  Dockerfile.arm64  manifest-quay.tmpl  manifest.tmpl
gitbatch/: Cli.py  Logging.py  Utils.py  __init__.py  __main__.py  cli.py  logging.py  utils.py
gitbatch/test/unit/: test_cli.py  test_copy.py
gitbatch/utils/: __init__.py  copy.py
